# contextpulse

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HANDOFF_PHASE3_AMI_BAKE_2026-04-27.md  LAUNCH_STATUS.md  LESSONS_LEARNED.md  LESSONS_LEARNED_ARCHIVE.md  LICENSE  MONETIZATION_README.md  NOTICE  PROJECT_CONTEXT.md  README.md  SECURITY.md  TESTING_PLAYBOOK.md  THIRD_PARTY_LICENSES.md  TONIGHT_WORK_PLAN.md  build.cmd  business-plan-prompt.md  contextpulse.spec  glama.json  installer.iss  pyproject.toml  technical-plan-prompt.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.yml
.github/workflows/: ci.yml  release.yml  security.yml
.reuse/: dep5
brand/: BRAND.md  VISUAL_DESIGN_SPEC.md  assets.md  colors.json  typography.json  voice.md
business-plan/: ACQUISITION_TARGETS.md  BUSINESS_PLAN.md  CENTRAL_MEMORY_ENGINE.md  COMPETITIVE_MATRIX.md  FINANCIAL_MODEL.md  GTM_TIMELINE.md  PITCH_DECK_OUTLINE.md  REGULATORY_COMPLIANCE.md  TECHNICAL_PLAN.md  UNIFIED_TECHNICAL_PLAN.md  technical-plan-prompt.md
config/: pro_features.yaml
contextpulse_pipeline/: __init__.py  audio_sync.py  bwf.py  cli.py  cluster_validation.py  compress.py  cross_source_merger.py  find_monologue.py  ingest.py  manifest.py  master.py  podcast_master.py  raw_source.py  speaker_fingerprint.py  speaker_map_inference.py  sync_matcher.py  synthesize.py  tier1_clean.py  transcribe.py  transcribe_per_source.py  unified_transcript.py  voice_isolation.py
contextpulse_pipeline/examples/: activefounder.py  josh_hike_episode_manifest.json
contextpulse_pipeline/infra/ami/: bake-g6-ami.sh  bake-runbook.md
contextpulse_pipeline/pipelines/: __init__.py
contextpulse_pipeline/pipelines/_spot_fleet/: __init__.py  fleet_runner.py
contextpulse_pipeline/pipelines/phase1_5_fingerprint/: __init__.py  submit.py  worker.py
contextpulse_pipeline/pipelines/phase1_transcribe/: README.md  __init__.py  redrive.py  submit.py  worker.py
contextpulse_pipeline/pipelines/voice_isolation/: __init__.py  submit.py  worker.py
contextpulse_pipeline/tests/: test_audio_sync.py  test_batch_pipeline.py  test_bwf.py  test_cluster_validation.py  test_compress.py  test_cross_source_merger.py  test_ingest.py  test_manifest.py  test_master.py  test_phase1_5_fingerprint_smoke.py  test_podcast_master.py  test_raw_source.py  test_speaker_fingerprint.py  test_sync_matcher.py  test_tier1_clean.py  test_transcribe.py  test_transcribe_per_source.py  test_unified_transcript.py  test_voice_isolation.py
contextpulse_pipeline/workers/: batch.py  spot_worker.py
docs/: COMPETITIVE_LANDSCAPE_AND_FEATURE_ROADMAP.md  ContextPulse-Market-Research.docx  DOMAINS.md  FEATURE_EVAL_PROMPT.md  FEATURE_FEASIBILITY.md  FEATURE_IDEAS.md  FEATURE_PROPOSALS.md  FEATURE_ROADMAP.md  LANDING_PAGE_COPY.md  LAUNCH_POSTS.md  LEAD_MAGNET.md  LICENSE_PIPELINE.md  MARKETING_ASSETS.md  MEMORY_MVP.md  MONETIZATION.md  NAMING.md  POSITIONING.md  PRODUCT_ROADMAP.md  SELF_IMPROVING_CONTEXT.md  SESSION_B_DESIGN_SPEC_PROMPT.md  SESSION_B_FEATURE_EVAL_PROMPT.md  UNINSTALL.md  VISION.md  VOICEASY_LONG_RUNNING_ANALYSIS.md  concept-synapseai-original.md  ecosystem-roadmap.md  elevator-pitch.md  gen_docx.js  market-research.md
docs/mcp-configs/: README.md
glama/: server.py
infra/: dynamodb_schema.md
infra/ami/: .bake-instance-id  .dev-instance-id  bake-userdata-v3.sh
infra/boot/: .josh-worker-id  boot.sh  boot_phase1_5_fingerprint.sh  boot_phase1_transcribe.sh  boot_voice_isolation.sh  constraints-2026-04-29.txt
lambda/: DEPLOY_NOTES.md  deploy.sh  license_webhook.py  template.yaml
lambda/license_webhook/: deploy.sh  handler.py  requirements.txt
packaging/linux/: contextpulse-mcp.service  contextpulse.service
packaging/macos/: com.jerardventures.contextpulse.plist  contextpulse_macos.spec  entitlements.plist  sign_and_notarize.sh
scripts/: calibrate_rms_parallel.py  calibrate_single_channel_thresholds.py  canary_health_check.py  canary_healthcheck.py  daemon-watchdog.ps1  export-public.py  extract_cluster_audit_snippets.py  extract_mic_audit_extra.py  extract_mic_audit_snippets.py  extract_uningested_audit.py  install-git-hooks.sh  nightly_learning.py  patch_raw_sources_add_tx01.py  phase3_v0_1_acceptance_test.py  pre-push-gate.sh  probe_consolidator.py  probe_save.py  recluster_dji_only.py  register-healthcheck-task.ps1  rms_attribute.py  run_a2_josh_hike.py  run_local_pipeline_finish.py  run_path_a_pipeline.py  run_phase1_5_fingerprint_gpu.py  run_phase1_transcribe_gpu.py  run_probe_consolidator.cmd  run_voice_isolation_gpu.py  validate_rms_against_labels.py  validate_single_channel_against_labels.py  validate_voice_separability.py  watchdog-healthcheck.ps1  weekly_learning.py
site/: deploy.sh  index-full.html  index.html  script.js  styles.css  wrangler.toml
tests/: test_user_acceptance.py
tests/integration/: conftest.py  test_daemon_lifecycle.py  test_gui_survival.py  test_thread_safety.py
tests/soak/: __init__.py  generate_test_data.py
