[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextpulse"
version = "0.1.0"
description = "Always-on context for AI agents"
requires-python = ">=3.12"
dependencies = [
    "contextpulse-core>=0.1.0",
    "contextpulse-sight>=0.1.0",
    "contextpulse-voice>=0.1.0",
    "contextpulse-touch>=0.1.0",
    "contextpulse-memory>=0.1.0",
    "python-dotenv>=1.0",
    "cryptography>=43.0",
    "mss>=9.0",
    "pynput>=1.7",
    "pystray>=0.19",
    "Pillow>=10.0",
    "numpy>=1.26",
    "rapidocr-onnxruntime>=1.2",
    "mcp>=1.0",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "pyperclip>=1.8",
    "pyautogui>=0.9",
    "anthropic>=0.39",
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Vision>=10.0",
    "rumps>=0.4",
    "mlx-whisper>=0.4",
]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
contextpulse = "contextpulse_core.daemon:main"

[tool.setuptools.packages.find]
where = [
    "packages/core/src",
    "packages/screen/src",
    "packages/agent/src",
    "packages/memory/src",
    "packages/project/src",
    "packages/voice/src",
    "packages/touch/src",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = "--import-mode=importlib"
